feat: add support for java string class and primitive wrapper classes